Style footer form

--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
         </li>
       </ul>
     </section>
-    <section class="contact-me">
-      <div class="form-background">
+    <footer>
+      <section class="contact-me">
         <h2 class="header-2 color-n0 center-text mb-12">Contact me</h2>
         <p class="body-4 center-text color-b50">
           If you have an application you are interested in developing, a feature
@@ -303,7 +303,7 @@
           ></textarea>
           <button class="button" type="submit">Get In Touch</button>
         </form>
-      </div>
-    </section>
+      </section>
+    </footer>
   </body>
 </html>
