Fix button alignment

--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
             cols="30"
             rows="8"
           ></textarea>
-          <button class="button" type="submit">Get In Touch</button>
+          <div>
+            <button class="button" type="submit">Get In Touch</button>
+          </div>
         </form>
       </section>
     </footer>
