--- a/index.html
+++ b/index.html
@@ -285,6 +285,8 @@
             id="name"
             name="user_name"
             placeholder="Name"
+            required
+            maxlength="30"
           />
           <input
             class="text-field"
@@ -292,6 +294,7 @@
             id="email"
             name="email"
             placeholder="Email"
+            required
           />
           <textarea
             class="text-field"
@@ -300,6 +303,8 @@
             placeholder="Write your message here..."
             cols="30"
             rows="8"
+            required
+            maxlength="500"
           ></textarea>
           <div>
             <button class="button" type="submit">Get In Touch</button>
