Match placeholder withd design

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             class="text-field"
             name="user_message"
             id="message"
-            placeholder="Write your message here..."
+            placeholder="Write your message here"
             cols="30"
             rows="8"
             required
