--- a/index.html
+++ b/index.html
@@ -270,5 +270,39 @@
         </li>
       </ul>
     </section>
+    <footer>
+      <section>
+        <h2>Contact me</h2>
+        <p>
+          If you have an application you are interested in developing, a feature
+          that you need built or a project that needs coding. I’d love to help
+          with it
+        </p>
+        <form action="/contact-me" method="POST">
+          <input
+            type="text"
+            name="user_name"
+            id="user_name"
+            placeholder="Name"
+            value="Yeremias"
+          />
+          <input
+            type="email"
+            name="user_email"
+            id="user_email"
+            placeholder="Email"
+            value="natajayanj14@gmail.com"
+          />
+          <textarea
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Write your message"
+          ></textarea>
+          <button>Get In Touch</button>
+        </form>
+      </section>
+    </footer>
   </body>
 </html>
