Set contact form background images

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       </ul>
     </section>
     <footer>
-      <section>
+      <section class="contact-me">
         <h2>Contact me</h2>
         <p>
           If you have an application you are interested in developing, a feature
