--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
     </section>
     <footer>
       <section class="contact-me">
-        <h2>Contact me</h2>
-        <p>
+        <h2 class="header-2 color-n0 mb-12">Contact me</h2>
+        <p class="body-4 align-center color-n0 mb-12">
           If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I’d love to help
           with it
@@ -285,6 +285,7 @@
             id="user_name"
             placeholder="Name"
             value="Yeremias"
+            class="text-field"
           />
           <input
             type="email"
@@ -292,6 +293,7 @@
             id="user_email"
             placeholder="Email"
             value="natajayanj14@gmail.com"
+            class="text-field"
           />
           <textarea
             name="message"
@@ -299,8 +301,11 @@
             cols="30"
             rows="10"
             placeholder="Write your message"
+            class="text-field"
           ></textarea>
-          <button>Get In Touch</button>
+          <div>
+            <button type="submit" class="button">Get In Touch</button>
+          </div>
         </form>
       </section>
     </footer>
