--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           that you need built or a project that needs coding. I’d love to help
           with it
         </p>
-        <form action="/contact-me" method="POST">
+        <form action="https://formspree.io/f/xdoygqql" method="POST">
           <input
             type="text"
             name="user_name"
