--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
             placeholder="Name"
             value="Yeremias"
             class="text-field"
+            maxlength="30"
+            required
           />
           <input
             type="email"
@@ -302,6 +304,8 @@
             rows="8"
             placeholder="Write your message"
             class="text-field"
+            maxlength="500"
+            required
           ></textarea>
           <div>
             <button type="submit" class="button">Get In Touch</button>
