Improve form UX

--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@
             type="text"
             name="user_name"
             id="user_name"
-            placeholder="Name"
-            value="Yeremias"
+            placeholder="Type your name"
             class="text-field"
             maxlength="30"
             required
@@ -293,8 +292,7 @@
             type="email"
             name="user_email"
             id="user_email"
-            placeholder="Email"
-            value="natajayanj14@gmail.com"
+            placeholder="Type your email"
             class="text-field"
           />
           <textarea
