Validate email address

--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
             id="user_email"
             placeholder="Type your email"
             class="text-field"
+            required
           />
           <textarea
             name="message"
