Align header center

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     </section>
     <footer>
       <section class="contact-me">
-        <h2 class="header-2 color-n0 mb-12">Contact me</h2>
+        <h2 class="header-2 align-center color-n0 mb-12">Contact me</h2>
         <p class="body-4 align-center color-n0 mb-12">
           If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I’d love to help
