--- a/index.html
+++ b/index.html
@@ -13,64 +13,67 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header class="app-bar">
-      <a href="/" class="logo"
-        ><img src="images/logo.svg" alt="Home" width="76" height="20"
-      /></a>
-      <nav>
-        <a href="#menu" class="tertiary-button"
-          ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
+    <div class="headline-container">
+      <header class="app-bar">
+        <a href="/" class="logo"
+          ><img src="images/logo.svg" alt="Home" width="76" height="20"
         /></a>
-      </nav>
-    </header>
-    <section class="headline">
-      <h1 class="header-2 color-n800 mb-12">I’m Usman, Glad to see you!</h1>
-      <p class="body-2 color-n600 mb-12 drop-shadow">
-        I’m a software developer! I can help you build a product feature or
-        website. Look through some of my work and experience! If you like what
-        you see and have a project you need coded, don’t hestiate to contact me.
-      </p>
-      <a
-        href="#connect"
-        class="link-button body-2 bolder color-b300 mb-12 drop-shadow"
-      >
-        LET'S CONNECT
-      </a>
-      <ul class="social-media-icons">
-        <li>
-          <a href="https://twitter.com/usbkay"
-            ><img
-              src="images/icons/twitter.svg"
-              alt="Usman's Twitter"
-              class="social-icon"
+        <nav>
+          <a href="#menu" class="tertiary-button"
+            ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
           /></a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
-            ><img
-              src="images/icons/linkedin.svg"
-              alt="Usman's LinkedIn"
-              class="social-icon"
-          /></a>
-        </li>
-        <li>
-          <a href="https://medium.com/@usmansbk"
-            ><img
-              src="images/icons/medium.svg"
-              alt="Usman's Medium Blog"
-              class="social-icon"
-          /></a>
-        </li>
-        <li>
-          <a href="https://angel.co/u/usman-suleiman-1"
-            ><img
-              src="images/icons/angel-list.svg"
-              alt="Angel List"
-              class="social-icon"
-          /></a>
-        </li>
-      </ul>
-    </section>
+        </nav>
+      </header>
+      <section class="headline">
+        <h1 class="header-2 color-n800 mb-12">I’m Usman, Glad to see you!</h1>
+        <p class="body-2 color-n600 mb-12 drop-shadow">
+          I’m a software developer! I can help you build a product feature or
+          website. Look through some of my work and experience! If you like what
+          you see and have a project you need coded, don’t hestiate to contact
+          me.
+        </p>
+        <a
+          href="#connect"
+          class="link-button body-2 bolder color-b300 mb-12 drop-shadow"
+        >
+          LET'S CONNECT
+        </a>
+        <ul class="social-media-icons">
+          <li>
+            <a href="https://twitter.com/usbkay"
+              ><img
+                src="images/icons/twitter.svg"
+                alt="Usman's Twitter"
+                class="social-icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
+              ><img
+                src="images/icons/linkedin.svg"
+                alt="Usman's LinkedIn"
+                class="social-icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://medium.com/@usmansbk"
+              ><img
+                src="images/icons/medium.svg"
+                alt="Usman's Medium Blog"
+                class="social-icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://angel.co/u/usman-suleiman-1"
+              ><img
+                src="images/icons/angel-list.svg"
+                alt="Angel List"
+                class="social-icon"
+            /></a>
+          </li>
+        </ul>
+      </section>
+    </div>
     <div class="works grid-container">
       <article class="card">
         <img
