--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </ul>
       </section>
     </div>
-    <div class="works grid-container">
+    <div class="works">
       <article class="card">
         <img
           src="images/snapshots/1.svg"
