--- a/index.html
+++ b/index.html
@@ -19,9 +19,26 @@
           ><img src="images/logo.svg" alt="Home" width="76" height="20"
         /></a>
         <nav>
-          <a href="#menu" class="tertiary-button"
+          <a href="#menu" class="menu-button tertiary-button"
             ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
           /></a>
+          <ul class="menu-items">
+            <li>
+              <a href="#portfolio">
+                <p class="body-3 bolder color-n600">Portfolio</p>
+              </a>
+            </li>
+            <li>
+              <a href="#about">
+                <p class="body-3 bolder color-n600">About</p>
+              </a>
+            </li>
+            <li>
+              <a href="#portfolio">
+                <p class="body-3 bolder color-n600">Contact</p>
+              </a>
+            </li>
+          </ul>
         </nav>
       </header>
       <section class="headline">
