Use high quality images

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="works">
       <article class="card">
         <img
-          src="images/snapshots/1.svg"
+          src="images/snapshots/tonic.svg"
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
@@ -108,7 +108,7 @@
         </div>
         <p class="body-3 color-n600 mb-12">
           A daily selection of privately personalized reads; no accounts or
-          sign-ups required.
+          sign-ups required..
         </p>
         <ul class="tags">
           <li class="tag"><span class="small color-b400">html</span></li>
@@ -121,24 +121,28 @@
       </article>
       <article class="card">
         <img
-          src="images/snapshots/2.svg"
+          src="images/snapshots/stories.svg"
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
         <h2 class="header-3 color-n800">Multi-Post Stories</h2>
         <div class="frame-2">
-          <span class="caption bolder-2 color-n600">CANOPY</span>
+          <span class="caption bolder-2 color-n600">FACEBOOK</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
           <span class="caption bolder-2 color-n100">Backend Dev</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
           <span class="caption bolder-2 color-n100">2015</span>
         </div>
         <p class="body-3 color-n600 mb-12">
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required.
+          Experimental content creation feature that allows users to add to an
+          existing story over the course of a day without spamming their
+          friends..
         </p>
         <ul class="tags">
           <li class="tag"><span class="small color-b400">html</span></li>
+          <li class="tag">
+            <span class="small color-b400">Ruby on rails</span>
+          </li>
           <li class="tag"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
@@ -148,24 +152,27 @@
       </article>
       <article class="card">
         <img
-          src="images/snapshots/3.svg"
+          src="images/snapshots/facebook.svg"
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
-        <h2 class="header-3 color-n800">Tonic</h2>
+        <h2 class="header-3 color-n800">Facebook 360</h2>
         <div class="frame-2">
-          <span class="caption bolder-2 color-n600">CANOPY</span>
+          <span class="caption bolder-2 color-n600">FACEBOOK</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          <span class="caption bolder-2 color-n100">Backend Dev</span>
+          <span class="caption bolder-2 color-n100">Full Stack Dev</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
           <span class="caption bolder-2 color-n100">2015</span>
         </div>
         <p class="body-3 color-n600 mb-12">
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required.
+          Exploring the future of media in Facebook's first Virtual Reality app;
+          a place to discover and enjoy 360 photos and videos on Gear VR.
         </p>
         <ul class="tags">
           <li class="tag"><span class="small color-b400">html</span></li>
+          <li class="tag">
+            <span class="small color-b400">Ruby on rails</span>
+          </li>
           <li class="tag"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
@@ -175,24 +182,27 @@
       </article>
       <article class="card">
         <img
-          src="images/snapshots/4.svg"
+          src="images/snapshots/uber.svg"
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
-        <h2 class="header-3 color-n800">Multi-Post Stories</h2>
+        <h2 class="header-3 color-n800">Uber Navigation</h2>
         <div class="frame-2">
-          <span class="caption bolder-2 color-n600">CANOPY</span>
+          <span class="caption bolder-2 color-n600">UBER</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          <span class="caption bolder-2 color-n100">Backend Dev</span>
+          <span class="caption bolder-2 color-n100">Lead Developer</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
           <span class="caption bolder-2 color-n100">2015</span>
         </div>
         <p class="body-3 color-n600 mb-12">
-          A daily selection of privately personalized reads; no accounts or
-          sign-ups required.
+          A smart assistant to make driving more safe, efficient, and fun by
+          unlocking your most expensive computer: your car.
         </p>
         <ul class="tags">
           <li class="tag"><span class="small color-b400">html</span></li>
+          <li class="tag">
+            <span class="small color-b400">Ruby on rails</span>
+          </li>
           <li class="tag"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
