Make tags and icons responsive

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
-        <h2 class="header-3 color-n800">Tonic</h2>
+        <h2 class="header-3 color-n800 mb-12">Tonic</h2>
         <div class="frame-2">
           <span class="caption bolder-2 color-n600">CANOPY</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
@@ -125,7 +125,7 @@
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
-        <h2 class="header-3 color-n800">Multi-Post Stories</h2>
+        <h2 class="header-3 color-n800 mb-12">Multi-Post Stories</h2>
         <div class="frame-2">
           <span class="caption bolder-2 color-n600">FACEBOOK</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
@@ -156,7 +156,7 @@
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
-        <h2 class="header-3 color-n800">Facebook 360</h2>
+        <h2 class="header-3 color-n800 mb-12">Facebook 360</h2>
         <div class="frame-2">
           <span class="caption bolder-2 color-n600">FACEBOOK</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
@@ -186,7 +186,7 @@
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
-        <h2 class="header-3 color-n800">Uber Navigation</h2>
+        <h2 class="header-3 color-n800 mb-12">Uber Navigation</h2>
         <div class="frame-2">
           <span class="caption bolder-2 color-n600">UBER</span>
           <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
