--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </a>
             </li>
             <li>
-              <a href="#portfolio">
+              <a href="#contact-me">
                 <p class="body-3 bolder color-n600">Contact</p>
               </a>
             </li>
@@ -91,7 +91,7 @@
         </ul>
       </section>
     </div>
-    <div class="works">
+    <div id="portfolio" class="works">
       <article class="card">
         <img
           src="images/snapshots/tonic.svg"
@@ -227,7 +227,7 @@
         </div>
       </article>
     </div>
-    <section class="about">
+    <section id="about" class="about">
       <h2 class="header-2 color-n800 mb-12">About Myself</h2>
       <p class="body-2 color-n600 mb-12">
         Hello I’m a software developer! I can help you build a product , feature
@@ -316,7 +316,7 @@
         </li>
       </ul>
     </section>
-    <footer>
+    <footer id="contact-me">
       <section class="contact-me">
         <h2 class="header-2 align-center color-n0 mb-12">Contact me</h2>
         <p class="body-4 align-center color-n0 mb-12">
