--- a/index.html
+++ b/index.html
@@ -227,51 +227,54 @@
         </div>
       </article>
     </div>
-    <section id="about" class="about">
-      <h2 class="header-2 color-n800 mb-12">About Myself</h2>
-      <p class="body-2 color-n600 mb-12">
-        Hello I’m a software developer! I can help you build a product , feature
-        or website Look through some of my work and experience! If you like what
-        you see and have a project you need coded, don’t hestiate to contact me.
-      </p>
-      <a href="#connect" class="link-button body-2 bolder color-b300 mb-12">
-        LET'S CONNECT
-      </a>
-      <ul class="social-media-icons mb-12">
-        <li>
-          <a href="https://twitter.com/usbkay"
-            ><img
-              src="images/icons/twitter.svg"
-              alt="Usman's Twitter"
-              class="social-icon"
-          /></a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
-            ><img
-              src="images/icons/linkedin.svg"
-              alt="Usman's LinkedIn"
-              class="social-icon"
-          /></a>
-        </li>
-        <li>
-          <a href="https://medium.com/@usmansbk"
-            ><img
-              src="images/icons/medium.svg"
-              alt="Usman's Medium Blog"
-              class="social-icon"
-          /></a>
-        </li>
-        <li>
-          <a href="https://angel.co/u/usman-suleiman-1"
-            ><img
-              src="images/icons/angel-list.svg"
-              alt="Angel List"
-              class="social-icon"
-          /></a>
-        </li>
-      </ul>
-      <button type="button" class="button">Get my resume</button>
+    <section id="about" class="about-container">
+      <div class="about">
+        <h2 class="header-2 color-n800 mb-12">About Myself</h2>
+        <p class="body-2 color-n600 mb-12">
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If you
+          like what you see and have a project you need coded, don’t hestiate to
+          contact me.
+        </p>
+        <a href="#connect" class="link-button body-2 bolder color-b300 mb-12">
+          LET'S CONNECT
+        </a>
+        <ul class="social-media-icons mb-12">
+          <li>
+            <a href="https://twitter.com/usbkay"
+              ><img
+                src="images/icons/twitter.svg"
+                alt="Usman's Twitter"
+                class="social-icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
+              ><img
+                src="images/icons/linkedin.svg"
+                alt="Usman's LinkedIn"
+                class="social-icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://medium.com/@usmansbk"
+              ><img
+                src="images/icons/medium.svg"
+                alt="Usman's Medium Blog"
+                class="social-icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://angel.co/u/usman-suleiman-1"
+              ><img
+                src="images/icons/angel-list.svg"
+                alt="Angel List"
+                class="social-icon"
+            /></a>
+          </li>
+        </ul>
+        <button type="button" class="button">Get my resume</button>
+      </div>
       <ul class="skill-list">
         <li>
           <a
