Style skill list

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <h6 class="body-1 bolder flex-text">Languages</h6>
             <img src="images/icons/chevron-down.svg" alt="Close" />
           </a>
-          <ul class="p-12">
+          <ul class="p-12 skill-items">
             <li class="skill-item">
               <img src="images/icons/js.svg" alt="JavaScript" />
               <span class="body-3 bolder color-n700 p-16">JavaScript</span>
