Order cards body

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
-        <div class="card-body">
+        <div class="card-body swap">
           <h2 class="header-3 color-n800 mb-12">Multi-Post Stories</h2>
           <div class="frame-2">
             <span class="caption bolder-2 color-n600">FACEBOOK</span>
@@ -198,7 +198,7 @@
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
-        <div class="card-body">
+        <div class="card-body swap">
           <h2 class="header-3 color-n800 mb-12">Uber Navigation</h2>
           <div class="frame-2">
             <span class="caption bolder-2 color-n600">UBER</span>
