--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
           <h2 class="header-3 color-n800 mb-12">Tonic</h2>
           <div class="frame-2">
             <span class="caption bolder-2 color-n600">CANOPY</span>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+            <img src="images/icons/dot.svg" alt="Separator" />
             <span class="caption bolder-2 color-n100">Backend Dev</span>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+            <img src="images/icons/dot.svg" alt="Separator" />
             <span class="caption bolder-2 color-n100">2015</span>
           </div>
           <p class="body-3 color-n600 mb-12">
@@ -133,9 +133,9 @@
           <h2 class="header-3 color-n800 mb-12">Multi-Post Stories</h2>
           <div class="frame-2">
             <span class="caption bolder-2 color-n600">FACEBOOK</span>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+            <img src="images/icons/dot.svg" alt="Separator" />
             <span class="caption bolder-2 color-n100">Backend Dev</span>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+            <img src="images/icons/dot.svg" alt="Separator" />
             <span class="caption bolder-2 color-n100">2015</span>
           </div>
           <p class="body-3 color-n600 mb-12">
@@ -168,9 +168,9 @@
           <h2 class="header-3 color-n800 mb-12">Facebook 360</h2>
           <div class="frame-2">
             <span class="caption bolder-2 color-n600">FACEBOOK</span>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+            <img src="images/icons/dot.svg" alt="Separator" />
             <span class="caption bolder-2 color-n100">Full Stack Dev</span>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+            <img src="images/icons/dot.svg" alt="Separator" />
             <span class="caption bolder-2 color-n100">2015</span>
           </div>
           <p class="body-3 color-n600 mb-12">
@@ -202,9 +202,9 @@
           <h2 class="header-3 color-n800 mb-12">Uber Navigation</h2>
           <div class="frame-2">
             <span class="caption bolder-2 color-n600">UBER</span>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+            <img src="images/icons/dot.svg" alt="Separator" />
             <span class="caption bolder-2 color-n100">Lead Developer</span>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+            <img src="images/icons/dot.svg" alt="Separator" />
             <span class="caption bolder-2 color-n100">2015</span>
           </div>
           <p class="body-3 color-n600 mb-12">
