Style header 1 for desktop view

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         </nav>
       </header>
       <section class="headline">
-        <h1 class="header-2 color-n800 mb-12">I’m Usman, Glad to see you!</h1>
+        <h1 class="header-1 color-n800 mb-12">
+          I’m Usman,<br />Glad to see you!
+        </h1>
         <p class="body-2 color-n600 mb-12 drop-shadow">
           I’m a software developer! I can help you build a product feature or
           website. Look through some of my work and experience! If you like what
