--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     </div>
     <section id="about" class="about-container">
       <div class="about">
-        <h2 class="header-2 color-n800 mb-12">About Myself</h2>
+        <h2 class="header-2 color-n800 mb-12">About<br />Myself</h2>
         <p class="body-2 color-n600 mb-12">
           Hello I’m a software developer! I can help you build a product ,
           feature or website Look through some of my work and experience! If you
