--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           ><img src="images/logo.svg" alt="Home" width="76" height="20"
         /></a>
         <nav>
-          <a href="#menu" class="menu-button tertiary-button"
+          <a href="#menu" class="menu-button"
             ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
           /></a>
           <ul class="menu-items">
