--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
           /></a>
           <ul class="menu-items">
             <li>
-              <a href="#portfolio">
-                <p class="body-3 bolder color-n600">Portfolio</p>
+              <a href="#portfolio" class="nav-item body-3 bolder color-n600">
+                Portfolio
               </a>
             </li>
             <li>
-              <a href="#about">
-                <p class="body-3 bolder color-n600">About</p>
+              <a href="#about" class="nav-item body-3 bolder color-n600">
+                About
               </a>
             </li>
             <li>
-              <a href="#contact-me">
-                <p class="body-3 bolder color-n600">Contact</p>
+              <a href="#contact-me" class="nav-item body-3 bolder color-n600">
+                Contact
               </a>
             </li>
           </ul>
