--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <footer id="contact-me">
       <section class="contact-me">
         <h2 class="header-2 align-center color-n0 mb-12">Contact me</h2>
-        <p class="body-4 align-center color-n0 mb-12">
+        <p class="body-4 align-center color-n0 mb-12 instructions">
           If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I’d love to help
           with it
