Remove inline styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="headline-container">
       <header class="app-bar">
         <a href="/" class="logo"
-          ><img src="images/logo.svg" alt="Home" width="76" height="20"
+          ><img src="images/logo.svg" alt="Home Logo"
         /></a>
         <nav>
           <a href="#menu" class="menu-button"
