Add github profile

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a href="https://twitter.com/usbkay"
               ><img
                 src="images/icons/twitter.svg"
-                alt="Usman's Twitter"
+                alt="Usman's Twitter Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -68,7 +68,7 @@
             <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
               ><img
                 src="images/icons/linkedin.svg"
-                alt="Usman's LinkedIn"
+                alt="Usman's LinkedIn Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -81,10 +81,18 @@
             /></a>
           </li>
           <li>
+            <a href="https://github.com/usmansbk"
+              ><img
+                src="images/icons/github.svg"
+                alt="Usman's GitHub Profile"
+                class="social-icon"
+            /></a>
+          </li>
+          <li>
             <a href="https://angel.co/u/usman-suleiman-1"
               ><img
                 src="images/icons/angel-list.svg"
-                alt="Angel List"
+                alt="Usman's Angel List Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -261,6 +269,14 @@
               ><img
                 src="images/icons/medium.svg"
                 alt="Usman's Medium Blog"
+                class="social-icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://github.com/usmansbk"
+              ><img
+                src="images/icons/github.svg"
+                alt="Usman's GitHub Profile"
                 class="social-icon"
             /></a>
           </li>
