Add google global analytics tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
       href="https://fonts.googleapis.com/css?family=Poppins:regular,bold,500&display=swap"
     />
     <link rel="stylesheet" href="index.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-K834P60GR5"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-K834P60GR5");
+    </script>
   </head>
   <body>
     <div class="headline-container">
