--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Usman Suleiman Portfolio</title>
+    <title>Software Developer Portfolio</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins:regular,bold,500&display=swap"
@@ -266,7 +266,7 @@
             <a href="https://twitter.com/usbkay"
               ><img
                 src="images/icons/twitter.svg"
-                alt="Usman's Twitter"
+                alt="Usman's Twitter Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -274,7 +274,7 @@
             <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
               ><img
                 src="images/icons/linkedin.svg"
-                alt="Usman's LinkedIn"
+                alt="Usman's LinkedIn Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -298,7 +298,7 @@
             <a href="https://angel.co/u/usman-suleiman-1"
               ><img
                 src="images/icons/angel-list.svg"
-                alt="Angel List"
+                alt="Usman's Angel List Profile"
                 class="social-icon"
             /></a>
           </li>
