Fix social icons alt text

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <a href="https://twitter.com/usbkay"
               ><img
                 src="images/icons/twitter.svg"
-                alt="Usman's Twitter Profile"
+                alt="Twitter Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -82,7 +82,7 @@
             <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
               ><img
                 src="images/icons/linkedin.svg"
-                alt="Usman's LinkedIn Profile"
+                alt="LinkedIn Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -90,7 +90,7 @@
             <a href="https://medium.com/@usmansbk"
               ><img
                 src="images/icons/medium.svg"
-                alt="Usman's Medium Blog"
+                alt="Medium Blog"
                 class="social-icon"
             /></a>
           </li>
@@ -98,7 +98,7 @@
             <a href="https://github.com/usmansbk"
               ><img
                 src="images/icons/github.svg"
-                alt="Usman's GitHub Profile"
+                alt="GitHub Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -106,7 +106,7 @@
             <a href="https://angel.co/u/usman-suleiman-1"
               ><img
                 src="images/icons/angel-list.svg"
-                alt="Usman's Angel List Profile"
+                alt="Angel List Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -266,7 +266,7 @@
             <a href="https://twitter.com/usbkay"
               ><img
                 src="images/icons/twitter.svg"
-                alt="Usman's Twitter Profile"
+                alt="Twitter Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -274,7 +274,7 @@
             <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
               ><img
                 src="images/icons/linkedin.svg"
-                alt="Usman's LinkedIn Profile"
+                alt="LinkedIn Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -282,7 +282,7 @@
             <a href="https://medium.com/@usmansbk"
               ><img
                 src="images/icons/medium.svg"
-                alt="Usman's Medium Blog"
+                alt="Medium Blog"
                 class="social-icon"
             /></a>
           </li>
@@ -290,7 +290,7 @@
             <a href="https://github.com/usmansbk"
               ><img
                 src="images/icons/github.svg"
-                alt="Usman's GitHub Profile"
+                alt="GitHub Profile"
                 class="social-icon"
             /></a>
           </li>
@@ -298,7 +298,7 @@
             <a href="https://angel.co/u/usman-suleiman-1"
               ><img
                 src="images/icons/angel-list.svg"
-                alt="Usman's Angel List Profile"
+                alt="Angel List Profile"
                 class="social-icon"
             /></a>
           </li>
