Add sufficient description to image

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <article class="card">
         <img
           src="images/snapshots/tonic.svg"
-          alt="Tonic Snapshot"
+          alt="Snapshot of the project"
           class="snapshot mb-12"
         />
         <div class="card-body">
@@ -148,7 +148,7 @@
       <article class="card">
         <img
           src="images/snapshots/stories.svg"
-          alt="Tonic Snapshot"
+          alt="Snapshot of the project"
           class="snapshot mb-12"
         />
         <div class="card-body swap">
@@ -183,7 +183,7 @@
       <article class="card">
         <img
           src="images/snapshots/facebook.svg"
-          alt="Tonic Snapshot"
+          alt="Snapshot of the project"
           class="snapshot mb-12"
         />
         <div class="card-body">
@@ -217,7 +217,7 @@
       <article class="card">
         <img
           src="images/snapshots/uber.svg"
-          alt="Tonic Snapshot"
+          alt="Snapshot of the project"
           class="snapshot mb-12"
         />
         <div class="card-body swap">
