--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="/" class="logo"
           ><img src="images/logo.svg" alt="Home Logo"
         /></a>
-        <nav>
+        <nav class="mobile-menu">
           <a href="#menu" class="menu-button"
             ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
           /></a>
