--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
         </li>
       </ul>
     </section>
-    <footer id="contact-me">
-      <section class="contact-me">
+    <footer id="contact-me" class="bg-n0">
+      <section class="contact-me bg-b400">
         <h2 class="header-2 align-center color-n0 mb-12">Contact me</h2>
         <p class="body-4 align-center color-n0 mb-12 instructions">
           If you have an application you are interested in developing, a feature
