Remove redundant image

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </div>
       </article>
     </div>
-    <section id="about" class="about-container">
+    <section id="about" class="about-container bg-n0">
       <div class="about">
         <h2 class="header-2 color-n800 mb-12">About<br />Myself</h2>
         <p class="body-2 color-n600 mb-12">
