Remove redundant assets

--- a/index.html
+++ b/index.html
@@ -25,94 +25,89 @@
     </script>
   </head>
   <body>
-    <div class="headline-container">
-      <header class="app-bar">
-        <a href="/" class="logo"
-          ><img src="images/logo.svg" alt="Home Logo"
+    <header class="app-bar">
+      <a href="/" class="logo"><img src="images/logo.svg" alt="Home Logo" /></a>
+      <nav class="mobile-menu">
+        <a href="#menu" class="menu-button"
+          ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
         /></a>
-        <nav class="mobile-menu">
-          <a href="#menu" class="menu-button"
-            ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
-          /></a>
-          <ul class="menu-items">
-            <li>
-              <a href="#portfolio" class="nav-item body-3 bolder color-n600">
-                Portfolio
-              </a>
-            </li>
-            <li>
-              <a href="#about" class="nav-item body-3 bolder color-n600">
-                About
-              </a>
-            </li>
-            <li>
-              <a href="#contact-me" class="nav-item body-3 bolder color-n600">
-                Contact
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <section class="headline">
-        <h1 class="header-1 color-n800 mb-12">
-          I’m Usman,<br />Glad to see you!
-        </h1>
-        <p class="body-2 color-n600 mb-12 drop-shadow">
-          I’m a software developer! I can help you build a product feature or
-          website. Look through some of my work and experience! If you like what
-          you see and have a project you need coded, don’t hestiate to contact
-          me.
-        </p>
-        <a
-          href="#connect"
-          class="link-button body-2 bolder color-b300 mb-12 drop-shadow"
-        >
-          LET'S CONNECT
-        </a>
-        <ul class="social-media-icons">
+        <ul class="menu-items">
           <li>
-            <a href="https://twitter.com/usbkay"
-              ><img
-                src="images/icons/twitter.svg"
-                alt="Twitter Profile"
-                class="social-icon"
-            /></a>
+            <a href="#portfolio" class="nav-item body-3 bolder color-n600">
+              Portfolio
+            </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
-              ><img
-                src="images/icons/linkedin.svg"
-                alt="LinkedIn Profile"
-                class="social-icon"
-            /></a>
+            <a href="#about" class="nav-item body-3 bolder color-n600">
+              About
+            </a>
           </li>
           <li>
-            <a href="https://medium.com/@usmansbk"
-              ><img
-                src="images/icons/medium.svg"
-                alt="Medium Blog"
-                class="social-icon"
-            /></a>
-          </li>
-          <li>
-            <a href="https://github.com/usmansbk"
-              ><img
-                src="images/icons/github.svg"
-                alt="GitHub Profile"
-                class="social-icon"
-            /></a>
-          </li>
-          <li>
-            <a href="https://angel.co/u/usman-suleiman-1"
-              ><img
-                src="images/icons/angel-list.svg"
-                alt="Angel List Profile"
-                class="social-icon"
-            /></a>
+            <a href="#contact-me" class="nav-item body-3 bolder color-n600">
+              Contact
+            </a>
           </li>
         </ul>
-      </section>
-    </div>
+      </nav>
+    </header>
+    <section class="headline bg-n0">
+      <h1 class="header-1 color-n800 mb-12">
+        I’m Usman,<br />Glad to see you!
+      </h1>
+      <p class="body-2 color-n600 mb-12 drop-shadow">
+        I’m a software developer! I can help you build a product feature or
+        website. Look through some of my work and experience! If you like what
+        you see and have a project you need coded, don’t hestiate to contact me.
+      </p>
+      <a
+        href="#connect"
+        class="link-button body-2 bolder color-b300 mb-12 drop-shadow"
+      >
+        LET'S CONNECT
+      </a>
+      <ul class="social-media-icons">
+        <li>
+          <a href="https://twitter.com/usbkay"
+            ><img
+              src="images/icons/twitter.svg"
+              alt="Twitter Profile"
+              class="social-icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
+            ><img
+              src="images/icons/linkedin.svg"
+              alt="LinkedIn Profile"
+              class="social-icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://medium.com/@usmansbk"
+            ><img
+              src="images/icons/medium.svg"
+              alt="Medium Blog"
+              class="social-icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://github.com/usmansbk"
+            ><img
+              src="images/icons/github.svg"
+              alt="GitHub Profile"
+              class="social-icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://angel.co/u/usman-suleiman-1"
+            ><img
+              src="images/icons/angel-list.svg"
+              alt="Angel List Profile"
+              class="social-icon"
+          /></a>
+        </li>
+      </ul>
+    </section>
     <div id="portfolio" class="works">
       <article class="card">
         <img
