Add headline offset for fix appbar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </script>
   </head>
   <body>
-    <header class="app-bar">
+    <header class="app-bar bg-n0">
       <a href="/" class="logo"><img src="images/logo.svg" alt="Home Logo" /></a>
       <nav class="mobile-menu">
         <a href="#menu" class="menu-button"
