--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Software Developer Portfolio</title>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Poppins:regular,bold,500&display=swap"
+      href="https://fonts.googleapis.com/css?family=Poppins:regular,bold,500,600&display=swap"
     />
     <link rel="stylesheet" href="index.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -27,8 +27,8 @@
   <body>
     <header class="app-bar bg-n0">
       <a href="/" class="logo"><img src="images/logo.svg" alt="Home Logo" /></a>
-      <nav class="mobile-menu">
-        <a href="#menu" class="menu-button"
+      <nav class="nav">
+        <a href="#menu" class="icon-button menu-button"
           ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
         /></a>
         <ul class="menu-items">
@@ -49,6 +49,30 @@
           </li>
         </ul>
       </nav>
+      <div class="mobile-menu bg-b400">
+        <div class="app-bar">
+          <a href="#close" class="icon-button">
+            <img src="images/icons/close.svg" alt="Close menu" />
+          </a>
+        </div>
+        <nav class="expand-nav">
+          <ul>
+            <li class="mb-40">
+              <a href="#portfolio" class="header-3 fw-600 color-n0">
+                Portfolio
+              </a>
+            </li>
+            <li class="mb-40">
+              <a href="#about" class="header-3 fw-600 color-n0"> About </a>
+            </li>
+            <li>
+              <a href="#contact-me" class="header-3 fw-600 color-n0">
+                Contact
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <section class="headline bg-n0">
       <h1 class="header-1 color-n800 mb-12">
