Hide menu button on large screen

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </nav>
       <div class="mobile-menu bg-b400">
         <div class="app-bar">
-          <a href="#close" class="icon-button">
+          <a href="#close" class="icon-button menu-button">
             <img src="images/icons/close.svg" alt="Close menu" />
           </a>
         </div>
