--- a/index.html
+++ b/index.html
@@ -49,31 +49,29 @@
           </li>
         </ul>
       </nav>
-      <div class="mobile-menu bg-b400">
-        <div class="app-bar">
-          <a href="#close" class="icon-button menu-button">
-            <img src="images/icons/close.svg" alt="Close menu" />
-          </a>
-        </div>
-        <nav class="expand-nav">
-          <ul>
-            <li class="mb-40">
-              <a href="#portfolio" class="header-3 fw-600 color-n0">
-                Portfolio
-              </a>
-            </li>
-            <li class="mb-40">
-              <a href="#about" class="header-3 fw-600 color-n0"> About </a>
-            </li>
-            <li>
-              <a href="#contact-me" class="header-3 fw-600 color-n0">
-                Contact
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
     </header>
+    <div class="mobile-menu bg-b400">
+      <div class="app-bar">
+        <a href="#close" class="icon-button menu-button">
+          <img src="images/icons/close.svg" alt="Close menu" />
+        </a>
+      </div>
+      <nav class="expand-nav">
+        <ul>
+          <li class="mb-40">
+            <a href="#portfolio" class="header-3 fw-600 color-n0">
+              Portfolio
+            </a>
+          </li>
+          <li class="mb-40">
+            <a href="#about" class="header-3 fw-600 color-n0"> About </a>
+          </li>
+          <li>
+            <a href="#contact-me" class="header-3 fw-600 color-n0"> Contact </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <section class="headline bg-n0">
       <h1 class="header-1 color-n800 mb-12">
         I’m Usman,<br />Glad to see you!
