Add menu button id

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="app-bar bg-n0">
       <a href="/" class="logo"><img src="images/logo.svg" alt="Home Logo" /></a>
       <nav class="nav">
-        <a href="#menu" class="icon-button menu-button"
+        <a id="open-menu" href="#menu" class="icon-button menu-button"
           ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
         /></a>
         <ul class="menu-items">
@@ -52,7 +52,7 @@
     </header>
     <div class="mobile-menu bg-b400">
       <div class="app-bar">
-        <a href="#close" class="icon-button menu-button">
+        <a id="close-menu" href="#close" class="icon-button menu-button">
           <img src="images/icons/close.svg" alt="Close menu" />
         </a>
       </div>
