Fix JS linter errors

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <img src="images/icons/close.svg" alt="Close menu" />
         </a>
       </div>
-      <nav class="expand-nav">
+      <nav id="mobile-nav" class="expand-nav">
         <ul>
           <li class="mb-40">
             <a href="#portfolio" class="header-3 fw-600 color-n0">
