Dynamically set menu overlay

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </script>
   </head>
   <body>
-    <header class="app-bar bg-n0 menu-overlay">
+    <header class="app-bar bg-n0">
       <a href="/" class="logo"><img src="images/logo.svg" alt="Home Logo" /></a>
       <nav class="nav">
         <a id="open-menu" href="#menu" class="icon-button menu-button"
@@ -72,7 +72,7 @@
         </ul>
       </nav>
     </div>
-    <section class="headline bg-n0 menu-overlay">
+    <section class="headline bg-n0">
       <h1 class="header-1 color-n800 mb-12">
         I’m Usman,<br />Glad to see you!
       </h1>
@@ -130,7 +130,7 @@
         </li>
       </ul>
     </section>
-    <div id="portfolio" class="works menu-overlay">
+    <div id="portfolio" class="works">
       <article class="card">
         <img
           src="images/snapshots/tonic.svg"
@@ -266,7 +266,7 @@
         </div>
       </article>
     </div>
-    <section id="about" class="about-container bg-n0 menu-overlay">
+    <section id="about" class="about-container bg-n0">
       <div class="about">
         <h2 class="header-2 color-n800 mb-12">About<br />Myself</h2>
         <p class="body-2 color-n600 mb-12">
@@ -366,7 +366,7 @@
         </li>
       </ul>
     </section>
-    <footer id="contact-me" class="bg-n0 menu-overlay">
+    <footer id="contact-me" class="bg-n0">
       <section class="contact-me bg-b400">
         <h2 class="header-2 align-center color-n0 mb-12">Contact me</h2>
         <p class="body-4 align-center color-n0 mb-12 instructions">
