Change link hover color

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   <body>
     <header class="app-bar bg-n0">
       <a href="/" class="logo"><img src="images/logo.svg" alt="Home Logo" /></a>
-      <nav class="nav">
+      <nav class="navbar">
         <a id="open-menu" href="#menu" class="icon-button menu-button"
           ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
         /></a>
-        <ul class="menu-items">
+        <ul class="menu-items nav">
           <li>
             <a href="#portfolio" class="nav-item body-3 bolder color-n600">
               Portfolio
