Rename nav classes to match bootstrap

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
           ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
         /></a>
         <ul class="menu-items nav">
-          <li>
-            <a href="#portfolio" class="nav-item body-3 bolder color-n600">
+          <li class="nav-item">
+            <a href="#portfolio" class="nav-link body-3 bolder color-n600">
               Portfolio
             </a>
           </li>
-          <li>
-            <a href="#about" class="nav-item body-3 bolder color-n600">
+          <li class="nav-item">
+            <a href="#about" class="nav-link body-3 bolder color-n600">
               About
             </a>
           </li>
-          <li>
-            <a href="#contact-me" class="nav-item body-3 bolder color-n600">
+          <li class="nav-item">
+            <a href="#contact-me" class="nav-link body-3 bolder color-n600">
               Contact
             </a>
           </li>
