Highlight active section

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       gtag("config", "G-K834P60GR5");
     </script>
   </head>
-  <body>
+  <body data-spy="scroll" data-target="#navbar-spy" data-offset="0">
     <header class="app-bar bg-n0">
       <a href="/" class="logo"><img src="images/logo.svg" alt="Home Logo" /></a>
-      <nav class="navbar">
+      <nav id="navbar-spy" class="navbar">
         <a id="open-menu" href="#menu" class="icon-button menu-button"
           ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
         /></a>
@@ -408,6 +408,9 @@
         </form>
       </section>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="index.js"></script>
   </body>
 </html>
