--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     <footer id="contact-me" class="bg-n0">
       <section class="contact-me bg-b400">
         <h2 class="header-2 align-center color-n0 mb-12">Contact me</h2>
-        <p class="body-4 align-center color-n0 mb-12 instructions">
+        <p class="body-4 align-center color-n0 mb-12">
           If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding. I’d love to help
           with it
@@ -401,7 +401,7 @@
             maxlength="500"
             required
           ></textarea>
-          <div>
+          <div class="action-button">
             <button type="submit" class="button">Get In Touch</button>
           </div>
         </form>
