Dynamically add project cards

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </ul>
     </section>
     <div id="portfolio" class="works">
-      <article class="card">
+      <!-- <article class="card">
         <img
           src="images/snapshots/tonic.svg"
           alt="Snapshot of the project"
@@ -264,7 +264,7 @@
             <button type="button" class="button">See Project</button>
           </div>
         </div>
-      </article>
+      </article> -->
     </div>
     <section id="about" class="about-container bg-n0">
       <div class="about">
